# hyprpaperchanger

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
STL/: STL.c  STL.h
